<resources>
    <string name="app_name" translatable="false">Tempus</string>
    <string name="app_title" translatable="false">Tempus</string>
    <string name="title_activity_settings">Settings</string>
    <string name='new_alarm'>New Alarm</string>
    <string name="save_string">Save</string>
    <string name="switch_alarm" translatable="false">OFF</string>
    <string name="alarm_name">Alarm Name</string>
    <string name="alarm_eta">expected time of arrivel</string>
    <string name="alarm_on" translatable="false">ON</string>
    <string name="alarm_off" translatable="false">OFF</string>
    <string name="no_event">No events founds in calendar</string>
    <string name="pref_cat_traffic">BASED TRAFFIC INFORMATION</string>
    <string name="event_location">Event Location</string>
    <string name="event_start_time">Start time</string>
    <string name="event_end_time">End time</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="new_alarm_repeat_sum">Select the days that the alarm will repeat.</string>
    <string name="pref_header_app_options">Application Options</string>
    <string name="pref_header_app_options_sum">Change app preferences as language and time system</string>
    <string name="pref_header_lang_options">Language</string>
    <string name="pref_header_data_sync">Data Sync Options</string>
    <string name="pref_header_data_sync_sum">Set sync option to best experience.</string>
    <string name="pref_title_sync_frequency">Start To Sync Maps Before Ring The Alarm</string>
    <string name="pref_org_sync_frequency">How Much Time Do You Need To Be Ready To Leave?</string>
    <string name="pref_header_how_works">How it works?</string>
    <string name="pref_header_legal">Legal Information</string>
    <string name="pref_hour_systems">24 Hour System</string>
    <string name="pref_cat_alarm">ALARM INFORMATION</string>
    <string name="new_alarm_time">Time</string>
    <string name="new_alarm_title">Label</string>
    <string name="new_alarm_title_dialog">Alarm name</string>
    <string name="new_alarm_title_dialog_sum">Set a new name for the alarm.</string>
    <string name="new_alarm_default_name">Alarm</string>
    <string name="new_alarm_repeat">Repeat</string>
    <string name="snooze_title">Snooze</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="view_traffic">View Traffic</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="cancel">Cancel</string>
    <string name="delete_alarm_title">Are you sure?</string>
    <string name="delete_alarm_sum">Are you sure you want to delete the alarm?</string>
    <string name="confirm">Confirm</string>
    <string name="save_alarm_title">Saving New Alarm</string>
    <string name="save_alarm_sum">Are you sure you  want to save this alarm?</string>
    <string name="save_alarm_toast">Alarm saved and was set to ring sooner!</string>
    <string name="type">Type</string>
    <string name="title_activity_how_work">how_work</string>
    <string name="action_settings">Settings</string>
    <string name="hour">Hour</string>
    <string name="normal_alarm" translatable="false">Normal</string>
    <string name="set">Set</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="title_activity_view_map">View Atual Traffic</string>
    <string name="traffic_view_title_alart">Alert!</string>
    <string name="traffic_view_sum_alart">This operation cannot be done!</string>
    <string name="turn_off">Turn Off</string>
    <string name="error">Error</string>
    <string name="same_time">Same or bigger event start time was used, you cannot continue. </string>
    <string name="error_maps">Failed to calculate traffic time. Verify your internet and try again.</string>
    <string name="error_place">Place not selected! Select a place to continue.</string>
    <string name="error_ringtone">Your ringtone was set to Silent. Are you sure you want to continue?</string>
    <string name="how_it_works">Tempus is an incredible alarm clock that uses the traffic information to help you never be late for any further engagement. Through an incredible traffic monitoring system, Tempus can estimate the time it takes for you to reach a marked event on your calendar.</string>
    <string name="general_conditions">General Conditions</string>
    <string name="legal_info">These legal prescriptions regulate the access and use of the Tempus application, available free of charge by Diego Nunes Reis and Otávio Tarelho.\n\nThe Developers reserve the right to change and update, at any time and without prior notice, the information contained in the application, its configuration and format, as well as the respective conditions of use.\n\nCreators do not warrant that there are no interruptions or errors in using the Application or its content. They also don\'t guarantee that it is up-to-date, even though they use their greatest efforts to avoid and correct failures, as well as to update the content.\n\nThe access to this Application and use of the information contained therein is the sole responsibility of the person making use of it. Developers shall not be liable for any consequences, damages or losses arising from such access or use of the information. Developers are not responsible for possible security breaches that may be produced, nor for possible damages that may be generated on the user\'s device, files or documents that are stored in it, as a result of the presence of viruses in the employee\'s device To connect to or use outdated versions of the latter.\n\nDevelopers do not guarantee the absence of viruses or other items that may cause changes in user\'s equipment, documents or user files, and disclaims any liability for any damages suffered by the user for that reason.\n\n\n</string>
    <string name="location_permission">This app requires access to your location</string>

    <string name="title_activity_alarm_ringing" translatable="false">.</string>
    <string name="getting_route_info_title">Please waite.</string>
    <string name="getting_route_info_body">Getting route information...</string>
    <string-array name="pref_lang_titles">
        <item>English</item>
        <item>Portuguese (BRA)</item>
    </string-array>

    <string-array name="pref_lang_values">
        <item>en</item>
        <item>pt</item>
    </string-array>

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>1 1/2 hours</item>
        <item>2 hours</item>
    </string-array>

    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>90</item>
        <item>180</item>
    </string-array>

    <string-array name="repeat_values_def">
        <item>-1</item>
    </string-array>

    <string-array name="repeat_label">
        <item>Never</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="repeat_values">
        <item>-1</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="alarm_type_title">
        <item>Normal</item>
        <item>Traffic Monitoring</item>
    </string-array>

    <string-array name="alarm_type_values">
        <item>0</item>
        <item>1</item>
    </string-array>


</resources>
