<!--
  ~ Copyright (c) 2016. This app was made by Otavio Tarelho and Diego Nunes as requirement to get their major certificate. Any copy of this project will suffer legal penalties under Copyrights Laws.
  -->

<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="com.tempus.TempusSettingsActivity$AppOptPreferenceFragment"
        android:icon="@drawable/ic_settings_applications_black_36dp"
        android:title="@string/pref_header_app_options"
        android:summary="@string/pref_header_app_options_sum"
        />

    <header
        android:fragment="com.tempus.TempusSettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_36dp"
        android:title="@string/pref_header_data_sync"
        android:summary="@string/pref_header_data_sync_sum"/>

    <header
        android:fragment="com.tempus.HowWork"
        android:icon="@drawable/ic_perm_device_information_black_36dp"
        android:title="@string/pref_header_how_works" />

    <header
        android:fragment="com.tempus.Legal"
        android:icon="@drawable/ic_info_outline_black_36dp"
        android:title="@string/pref_header_legal" />

</preference-headers>