<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:paddingTop="5dp"
    android:paddingBottom="20dp"
    >


    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/alarm_off"
        android:textOn="@string/alarm_on"
        android:id="@+id/switch_alarm"
        android:layout_alignBottom="@+id/alarmClock"
        android:layout_alignEnd="@+id/ListItemETA"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:paddingTop="9dp"
        android:checked="false"
        android:textColor="#FFFFFF"
        android:focusable="false"
        />

    <TextClock
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alarmClock"
        android:textSize="65sp"
        android:textColor="@color/colorClock"
        android:fontFamily="sans-serif-thin"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/alarm_name"
        android:id="@+id/ListItemAlarmName"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/alarmClock"
        android:fontFamily="sans-serif"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_eta"
        android:id="@+id/ListItemETA"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="#FFFFFF"
        android:fontFamily="sans-serif"
        android:layout_alignBottom="@+id/ListItemAlarmName"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"/>


</RelativeLayout>
